# oneDNN

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel
bazel/: generate_header.bzl  template.bzl
